--- a/DS-NodeJS-101-TODO-MEAN/public/index.html
+++ b/DS-NodeJS-101-TODO-MEAN/public/index.html
@@ -17,6 +17,7 @@
         <!-- load angular via CDN -->
         <script src="https://code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
         <script src="https://code.angularjs.org/1.3.0-rc.1/angular-messages.min.js"></script>
+        <script src="//code.angularjs.org/1.3.0-rc.1/angular-route.min.js"></script>
         <script src="app.js"></script>
     </head>
     <body>
@@ -30,59 +31,14 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                   <!-- <li><a href="#/edittodo"><i class="fa fa-home"></i> EditTodo</a></li>-->
                 </ul>
             </div>
             </nav>
         </header>
 
         <div class="container">
-
-            <div ng-controller="mainController">
-                
-                <!--<h1>Hello {{name}} in Angular!</h1>-->
-                <form name="form1">
-                   <p>Enter Username:<input name="username" type="text" ng-model="username" ng-minlength='4' required/>
-                    <!--<span ng-show="form1.username.$dirty && form1.username.$error.required">Username is required!</span>-->
-                     <span ng-show="form1.username.$error.minlength">Username has to be atleast 4 chars</span></p>
-                    <div ng-messages="form1.username.$error">
-                        <div ng-message="required" ng-style={color:'purple'}> get todos for test user. type your username to get and add your todos</div>
-                    </div>
-                    <a href="#" class="btn btn-default" ng-model="todos" ng-click="getTodo()">Get Todo</a>
-                    </br>
-                    <h3>Todos</h3>
-                    <ul>
-                        <li ng-repeat="todo in todos">
-                            {{ todo.todo }}
-                        </li>
-                    </ul>
-                </form>
-                <form name="form2">
-                    <p>Todo: <input name="newTodo" type="text" ng-model="newTodo" ng-minlength='5'/>
-                    <span ng-show="form2.newTodo.$error.minlength">Todo has to be atleast 5 chars</span></p>
-                </form>
-                <a href="#" class="btn btn-default" ng-model="addedTodo" ng-click="addTodo()">Add Todo</a>
-                </br>
-               <p>{{ addedTodo }}</p>
-                <!--<a href="#" class="btn btn-default" ng-model="todos" ng-click="getTodo()">Get Todo</a>
-                </br>
-                <h3>Todos</h3>
-                <ul>
-                    <li ng-repeat="todo in todos">
-                        {{ todo.todo }}
-                    </li>
-                </ul>-->
-               <!-- <form name="form">
-                    Add Todo: <input name="newTodo" type="text" ng-model="newTodo" ng-minlength='5'/>
-                    <span ng-show="form.newTodo.$error.minlength">Todo has to be atleast 5 chars</span>
-                </form> -->
-                <!--<form name="form2">
-                    <p>Add Todo: <input name="newTodo" type="text" ng-model="newTodo" ng-minlength='5'/>
-                    <span ng-show="form2.newTodo.$error.minlength">Todo has to be atleast 5 chars</span></p>
-                    <p>Username:<input name="username" type="text" ng-model="username" ng-minlength='4'/>
-                    <span ng-show="form.username.$error.minlength">Username has to be atleast 4 chars</span></p>
-                </form>-->
-                
-            </div>
+            <div ng-view></div>
 
         </div>
 
