--- a/DS-LAD-101/public/index.html
+++ b/DS-LAD-101/public/index.html
@@ -32,6 +32,7 @@
 				<ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="#/register"><i class="fa fa-home"></i>Register</a></li>
+                    <li><a href="#/test"><i class="fa fa-home"></i>Test</a></li>
 				</ul>
 			</div>
 			</nav>
